--- a/Asteroids/nbproject/project.properties
+++ b/Asteroids/nbproject/project.properties
@@ -32,7 +32,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${libs.Slick2D.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -68,7 +69,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=-Djava.library.path=/home/jmsgfhr/NetBeansProjects/game/Jogo-de-POO/Asteroids/slick
+run.jvmargs=-Djava.library.path=C:\\Users\\eulle\\Desktop\\Slick
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
